--- a/sass/partials/_cards.scss
+++ b/sass/partials/_cards.scss
@@ -61,6 +61,14 @@
     margin-bottom: 0;
 }
 
+.card__header .icon--link {
+    float: right;
+}
+
+.card__header .icon--link + .rollback {
+    padding: 0 .4em;
+}
+
 .rollback {
     float: right;
 }
