--- a/app/templates/admin/users.management.twig
+++ b/app/templates/admin/users.management.twig
@@ -39,22 +39,22 @@
                 <td>
                     {% if user.hal_active %}
                         <span class="icon--success">
-                            <svg class="icon" viewBox="0 0 32 32"><use xlink:href="#tick"></use></svg> Active
+                            <svg class="icon"><use xlink:href="#tick"></use></svg> Active
                         </span>
                     {% else %}
                         <span class="icon--error-inverse">
-                            <svg class="icon" viewBox="0 0 32 32"><use xlink:href="#nope"></use></svg> Inactive
+                            <svg class="icon"><use xlink:href="#nope"></use></svg> Inactive
                         </span>
                     {% endif %}
                 </td>
                 <td>
                     {% if user.ldap_active %}
                         <span class="icon--success">
-                            <svg class="icon" viewBox="0 0 32 32"><use xlink:href="#tick"></use></svg> Active
+                            <svg class="icon"><use xlink:href="#tick"></use></svg> Active
                         </span>
                     {% else %}
                         <span class="icon--error-inverse">
-                            <svg class="icon" viewBox="0 0 32 32"><use xlink:href="#remove"></use></svg> Removed
+                            <svg class="icon"><use xlink:href="#remove"></use></svg> Removed
                         </span>
                     {% endif %}
                 </td>
