--- a/app/templates/push/push.twig
+++ b/app/templates/push/push.twig
@@ -98,7 +98,7 @@
                         <a href="{{ githubReference(push.build.repository.githubUser, push.build.repository.githubRepo, push.build.branch) }}">{{ push.build.branch|gitref }}</a> (behind or unresolved)
                     </span>
                 {% endif %}
-                <svg class="icon" viewBox="0 0 32 32"><use xlink:href="#fork"></use></svg>
+                <svg class="icon"><use xlink:href="#fork"></use></svg>
             </dd>
 
             <dt class="split--left__title">
@@ -106,7 +106,7 @@
             </dt>
             <dd class="split--left__value">
                 <a href="{{ githubCommit(push.build.repository.githubUser, push.build.repository.githubRepo, push.build.commit) }}">{{ push.build.commit|commit }}</a>
-                <svg class="icon" viewBox="0 0 32 32"><use xlink:href="#github"></use></svg>
+                <svg class="icon"><use xlink:href="#github"></use></svg>
             </dd>
         </dl>
     </div>
