--- a/app/templates/repository/admin.edit.twig
+++ b/app/templates/repository/admin.edit.twig
@@ -45,7 +45,7 @@
                 <li>
                     <h3 class="zeta label">Github Source</h3>
                     <a href="{{ githubRepo(repository.githubUser, repository.githubRepo) }}">{{ repository.githubUser }}/{{ repository.githubRepo }}</a>
-                    <svg class="icon" viewBox="0 0 32 32"><use xlink:href="#github"></use></svg>
+                    <svg class="icon"><use xlink:href="#github"></use></svg>
                     <small class="additional">Please contact a HAL administrator to change this setting.</small>
                 </li>
 
