--- a/app/templates/repository/repositories.twig
+++ b/app/templates/repository/repositories.twig
@@ -29,7 +29,7 @@
                         <td><a href="{{ urlFor('repository.status', {'id': repo.id}) }}">{{ repo.description }}</a></td>
                         <td>
                             <a href="{{ githubRepo(repo.githubUser, repo.githubRepo) }}">{{ repo.githubUser }}/{{ repo.githubRepo }}</a>
-                            <svg class="icon" viewBox="0 0 32 32"><use xlink:href="#github"></use></svg>
+                            <svg class="icon"><use xlink:href="#github"></use></svg>
                         </td>
                         <td>{{ repo.email }}</td>
                         <td>
