--- a/app/templates/user/user.twig
+++ b/app/templates/user/user.twig
@@ -54,7 +54,7 @@
         <li><b>Total Pushes:</b> {{ pushes }}</li>
         <li>
             <b>Github Page:</b> <a href="http://git/{{ user.handle }}">http://git/{{ user.handle }}</a>
-            <svg class="icon" viewBox="0 0 32 32"><use xlink:href="#github"></use></svg>
+            <svg class="icon"><use xlink:href="#github"></use></svg>
         </li>
     </ul>
 
