--- a/app/templates/partials/build-table.twig
+++ b/app/templates/partials/build-table.twig
@@ -25,7 +25,7 @@
             <td>{{ build.environment.key }}</td>
             <td>
                 <a href="{{ githubReference(build.repository.githubUser, build.repository.githubRepo, build.branch) }}">{{ build.branch|sliceGitref }}</a>
-                <svg class="icon" viewBox="0 0 32 32"><use xlink:href="#fork"></use></svg>
+                <svg class="icon"><use xlink:href="#fork"></use></svg>
             </td>
             <td>
                 {% if build.user %}
