--- a/app/templates/partials/layout.header.twig
+++ b/app/templates/partials/layout.header.twig
@@ -27,14 +27,14 @@
             <nav role="navigation">
                 <ul class="nav--main mbn">
                     {% if currentUser %}
-                        {{ nav_macros.optionalNavlink('Dashboard', 'dashboard', 'dashboard', '-3') }}
+                        {{ nav_macros.optionalNavlink('Dashboard', 'dashboard', 'dashboard') }}
                         {{ nav_macros.optionalNavlink('Queue', 'queue', 'in') }}
 
                         {{ nav_macros.optionalNavlink('Groups', 'groups', 'list') }}
-                        {{ nav_macros.optionalNavlink('Repositories', 'repositories', 'repo', '-3') }}
+                        {{ nav_macros.optionalNavlink('Repositories', 'repositories', 'repo') }}
 
-                        {{ nav_macros.optionalNavlink('Servers', 'servers', 'server', '-4') }}
-                        {{ nav_macros.optionalNavlink('Environments', 'environments', 'leaf', '-1') }}
+                        {{ nav_macros.optionalNavlink('Servers', 'servers', 'server') }}
+                        {{ nav_macros.optionalNavlink('Environments', 'environments', 'leaf') }}
                         {{ nav_macros.optionalNavlink('Users', 'users', 'users') }}
 
                         {{ nav_macros.optionalNavlink('Logs', 'logs', 'paper-roll') }}
@@ -42,13 +42,13 @@
                         {% if isUserAdmin(currentUser) %}
                             {{ nav_macros.optionalNavlink('Admin', 'admin', 'watch') }}
                         {% endif %}
-                        {{ nav_macros.optionalNavlink('Help', 'help', 'question', '-6') }}
+                        {{ nav_macros.optionalNavlink('Help', 'help', 'question') }}
 
                         <li>{{ nav_macros.navlink('Settings', 'settings', 'settings') }}</li>
                         <li>{{ nav_macros.navlink('Logout', 'logout', 'sign-out') }}</li>
 
                     {% else %}
-                        <li class="signed-out">{{ nav_macros.navlink('Help', 'help', 'question', '-6') }}</li>
+                        <li class="signed-out">{{ nav_macros.navlink('Help', 'help', 'question') }}</li>
                         <li class="signed-out">{{ nav_macros.navlink('Login', 'login', 'sign-in') }}</li>
                     {% endif %}
                 </ul>
@@ -57,18 +57,18 @@
     {% endblock %}
 </header>
 
-{% macro navlink(title, key, icon, customWidth) %}
+{% macro navlink(title, key, icon) %}
     <a href="{{ urlFor(key) }}" title="{{ title }}">
-        <svg class="icon" viewBox="{{ customWidth|default('0') }} 0 32 32">
+        <svg class="icon">
             <use xlink:href="#{{ icon }}"></use>
         </svg>
         {{ title }}
     </a>
 {% endmacro %}
 
-{% macro optionalNavlink(title, key, icon, customWidth) %}
+{% macro optionalNavlink(title, key, icon) %}
     {% import _self as nav_macros %}
     {% if isNavOn(key) %}
-        <li>{{ nav_macros.navlink(title, key, icon, customWidth) }}</li>
+        <li>{{ nav_macros.navlink(title, key, icon) }}</li>
     {% endif %}
 {% endmacro %}
