--- a/app/templates/user/settings.twig
+++ b/app/templates/user/settings.twig
@@ -17,8 +17,8 @@
                     <label>
                         <input type="checkbox" name="navpreferences[]" value="{{ item }}" {{ isNavOn(item) ? ' checked' : '' }}>
 
-                        <svg class="icon pref-on" viewBox="0 0 32 32"><use xlink:href="#tick"></use></svg>
-                        <svg class="icon pref-off" viewBox="0 0 32 32"><use xlink:href="#cross"></use></svg>
+                        <svg class="icon pref-on"><use xlink:href="#tick"></use></svg>
+                        <svg class="icon pref-off"><use xlink:href="#cross"></use></svg>
 
                         {{ description }}
                     </label>
@@ -32,8 +32,8 @@
             <label>
                 <input type="checkbox" name="seriousbusiness" value="1" {{ isSeriousBusinessMode() ? ' checked' : '' }}>
 
-                <svg class="icon checkbox__on" viewBox="0 0 32 32"><use xlink:href="#tick"></use></svg>
-                <svg class="icon checkbox__off" viewBox="0 0 32 32"><use xlink:href="#cross"></use></svg>
+                <svg class="icon checkbox__on"><use xlink:href="#tick"></use></svg>
+                <svg class="icon checkbox__off"><use xlink:href="#cross"></use></svg>
 
                 Use <strong>Serious Business&#8482;</strong> mode
             </label>
