Add a way to tell deployments apart when the same server is shown multiples times on the repo status page. Not sure how I feel about this.

--- a/app/templates/repository/status.twig
+++ b/app/templates/repository/status.twig
@@ -96,6 +96,7 @@
                 {% endif %}
 
             </h4>
+            <p class="mbn"><span title="{{ deployment.path }}">{{ deployment.path }}</span></p>
         </header>
 
         <section class="card__details">
